--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.11.4",
-    "@types/three": "^0.163.0"
+    "@types/three": "^0.163.0",
+    "tailwindcss": "^3.4.3"
   }
 }
