--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@fontsource/source-sans-pro": "^5.0.8",
     "nuxt": "^3.11.2",
     "three": "^0.163.0",
     "vue": "^3.4.21",
